--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <! DOCTYPE html>
 <html>
-<body>
-<title> Jack's Website </title>
-</body>
+  <body>
+    <title> Jack's Website </title>
+  </body>
+  
+  <style>
+
+  	body {
+
+  		background-color: lightblue;
+
+  	}
+
+  </style>
+  
 </html>
