--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html>
   <body>
     <title> Jack's Website </title>
-    <h1> Jack's Website </h1>
+    <h1 id="WebTitle"> Jack's Website </h1>
   </body>
   
   <style>
 
+  	#WebTitle {
+
+  		text-align: center;
+  		font-family: fantasy;
+  		color: white;
+
+  	}
+
   	body {
+
+
 
   		background-color: lightblue;
 
