Best practices and layout edits

--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
-<! DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <title>Jack Douglas</title>
+  </head>
   <body>
-    <title> Jack's Website </title>
+    <style>
+      #WebTitle {
+  		  text-align: center;
+  		  font-family: fantasy;
+  		  color: white;
+  	  }
+
+  	  body {
+  		  background-color: lightblue;
+  	  }
+    </style>
     <h1 id="WebTitle"> Jack's Website </h1>
   </body>
   
-  <style>
-
-  	#WebTitle {
-
-  		text-align: center;
-  		font-family: fantasy;
-  		color: white;
-
-  	}
-
-  	body {
-
-
-
-  		background-color: lightblue;
-
-  	}
-
-  </style>
+  
   
 </html>
