--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <! DOCTYPE html>
 <html>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js"></script>
+  <script type="text/javascript" src="boot/js/bootstrap.min.js"></script>
+  <link rel="icon" href="http://www.freeiconspng.com/uploads/letter-j-icon-png-26.png">
+  <link rel="stylesheet" type="text/css" href="boot/css/bootstrap.css">
+
+  <style>
+  	#WebTitle {
+  		text-align: center;
+  		font-family: fantasy;
+  		color: white;
+  	}
+  	body {
+  		background-color: lightblue;
+  	}
+
+  </style>
+  
   <body>
     <title> Jack's Website </title>
     <h1 id="WebTitle"> Jack's Website </h1>
   </body>
-  
-  <style>
-
-  	#WebTitle {
-
-  		text-align: center;
-  		font-family: fantasy;
-  		color: white;
-
-  	}
-
-  	body {
 
 
-
-  		background-color: lightblue;
-
-  	}
-
-  </style>
   
 </html>
