--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <! DOCTYPE html>
 <html>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js"></script>
-  <script type="text/javascript" src="boot/js/bootstrap.min.js"></script>
-  <link rel="icon" href="http://www.freeiconspng.com/uploads/letter-j-icon-png-26.png">
-  <link rel="stylesheet" type="text/css" href="boot/css/bootstrap.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+
+  <link rel="icon" href="https://i.imgur.com/EVMzMW0.jpg">
+
 
   <style>
   	#WebTitle {
   		text-align: center;
-  		font-family: fantasy;
+  		font-family: monospace;
+      font-size: 16px;
   		color: white;
   	}
   	body {
@@ -20,8 +24,12 @@
   </style>
   
   <body>
+
     <title> Jack's Website </title>
     <h1 id="WebTitle"> Jack's Website </h1>
+  
+    <div t
+
   </body>
 
 
