--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     <title> Jack's Website </title>
     <h1 id="WebTitle"> Jack's Website </h1>
   
-    <div t
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img src="https://i.imgur.com/zMELg85.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+        Jack Douglas
+      </a>
+    </nav>
 
   </body>
 
