--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
   <body>
   
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar sticky-top navbar-light bg-light">
       <a class="navbar-brand" href="#">
         <img src="https://i.imgur.com/zMELg85.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
         Jack Douglas
