--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
       </a>
     </nav>
 
+    <footer class="footer ">
+
+      <div class="container">
+
+        <div class="row">
+
+
+        </div>
+
+      </div>
+
+    </footer>
+
   </body>
 
 
