--- a/index.html
+++ b/index.html
@@ -26,18 +26,28 @@
   <body>
   
     <nav class="navbar sticky-top navbar-light bg-light">
-      <a class="navbar-brand" href="#">
-        <img src="https://i.imgur.com/zMELg85.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-        Jack Douglas
-      </a>
+      <div class="top clearfix">
+        <a class="navbar-brand" href="#">
+          <img src="https://i.imgur.com/zMELg85.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+          Jack Douglas
+        </a>
+      </div>
     </nav>
 
-    <footer class="footer ">
+    <footer class="footer bg-color-1 ptb-20">
 
       <div class="container">
 
         <div class="row">
 
+          <div class="col-xs-12">
+            <div class="left floatleft">
+              <p>Copyright © 2017 Jack Douglas.</p>
+            </div>
+            <div class="right social-link floatright">
+              Made by Jack Douglas, on <a href="https://github.com/j-douglas/j-douglas.github.io" target="_blank" style="color: #393939"><i class="fa fa-github"></i></a>
+            </div>
+          </div>
 
         </div>
 
