--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </nav>
 
-    <footer class="footer bg-color-1 ptb-20">
+    <footer class="site-footer">
 
       <div class="container">
 
@@ -42,10 +42,12 @@
 
           <div class="col-xs-12">
             <div class="left floatleft">
-              <p>Copyright © 2017 Jack Douglas.</p>
+              <p id="Copyright1">Copyright © 2017 Jack Douglas.</p>
             </div>
             <div class="right social-link floatright">
-              Made by Jack Douglas, on <a href="https://github.com/j-douglas/j-douglas.github.io" target="_blank" style="color: #393939"><i class="fa fa-github"></i></a>
+              Made by Jack Douglas, on 
+              <a href="https://github.com/j-douglas/j-douglas.github.io" target="_blank" style="color: #393939"> <i class="fa fa-github"></i>
+              </a>
             </div>
           </div>
 
