--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
-  <link rel="icon" href="https://i.imgur.com/zMELg85.jpg">
-
+  <link rel="icon" href="https://i.imgur.com/n8Oyqjk.jpg">
 
   <style>
   	#WebTitle {
@@ -28,7 +27,7 @@
     <nav class="navbar sticky-top navbar-light bg-light">
       <div class="top clearfix">
         <a class="navbar-brand" href="#">
-          <img src="https://i.imgur.com/zMELg85.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+          <img src="https://i.imgur.com/n8Oyqjk.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
           Jack Douglas
         </a>
       </div>
