--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
       </div>
     </nav>
 
+    <div class="container">
+
+      <p2> Hi! My name is Jack Douglas and this is my personal website. Feel free to have a look around! </p2>
+
+    </div>
+
+
     <footer class="site-footer">
 
       <div class="container">
