--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   		color: white;
   	}
   	body {
-  		background-color: lightblue;
+  		background-color: #DEF6F7;
   	}
 
   </style>
@@ -33,7 +33,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <p2> Hi! My name is Jack Douglas and this is my personal website. Feel free to have a look around! </p2>
 
@@ -42,11 +42,11 @@
 
     <footer class="site-footer">
 
-      <div class="container">
+      <div class="container-fluid" style="background-colour: #648183;">
 
         <div class="row">
 
-          <div class="col-xs-12">
+          <div class="col-xs-12 ">
             <div class="left floatleft">
               <p id="Copyright1">Copyright © 2017 Jack Douglas.</p>
             </div>
