--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <footer class="site-footer">
 
-      <div class="container-fluid" style="background-colour: #648183;">
+      <div class="container" style="background-colour: #648183;">
 
         <div class="row">
 
