--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   		color: white;
   	}
   	body {
-  		background-color: #DEF6F7;
+  		background-color: #EAF9FA;
   	}
 
   </style>
@@ -48,7 +48,7 @@
 
     <footer class="site-footer">
 
-      <div class="container" style="background-colour: #648183;">
+      <div class="container">
 
         <div class="row">
 
