--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="right social-link floatright">
               Made by Jack Douglas, on 
-              <a href="https://github.com/j-douglas/j-douglas.github.io" target="_blank" style="color: #393939"> <i class="fa fa-github"></i>
+              <a href="https://github.com/j-douglas/j-douglas.github.io" target="_blank" style="color: #393939"> <span class="fa fa-github"></span>
               </a>
             </div>
           </div>
