--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
 
-    <footer class="site-footer">
+    <footer class="site-footer" style="color: #294547;">
 
       <div class="container">
 
@@ -58,7 +58,7 @@
             </div>
             <div class="right social-link floatright">
               Made by Jack Douglas, on 
-              <a href="https://github.com/j-douglas/j-douglas.github.io" target="_blank" style="color: #393939"> <span class="fa fa-github"></span>
+              <a href="https://github.com/j-douglas/j-douglas.github.io" > <i class="fa fa-github"></i>
               </a>
             </div>
           </div>
