--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
-  <link rel="icon" href="https://i.imgur.com/n8Oyqjk.jpg">
+  <link rel="icon" href="https://i.imgur.com/6nEJrsG.jpg">
 
   </head>
 
@@ -33,7 +33,7 @@
     <nav class="navbar sticky-top navbar-light bg-light">
       <div class="top clearfix">
         <a class="navbar-brand" href="#">
-          <img src="https://i.imgur.com/n8Oyqjk.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+          <img src="https://i.imgur.com/6nEJrsG.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
           Jack Douglas
         </a>
       </div>
@@ -46,9 +46,9 @@
     </div>
 
 
-    <footer class="site-footer" style="color: #294547;">
+    <footer class="container site-footer">
 
-      <div class="container">
+      <div class="container" style="color: #294547;">
 
         <div class="row">
 
