--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   		background-color: #EAF9FA;
   	}
 
+    #intro {
+      font-size: 20px;
+    }
+
   </style>
   
   <body>
@@ -41,7 +45,7 @@
 
     <div class="container-fluid">
 
-      <p2> Hi! My name is Jack Douglas and this is my personal website. Feel free to have a look around! </p2>
+      <p2 id="intro"> Hi! My name is <br><b> Jack Douglas </b> and this is my personal website. Feel free to have a look around! </p2>
 
     </div>
 
