--- a/index.html
+++ b/index.html
@@ -26,8 +26,19 @@
   		background-color: #EAF9FA;
   	}
 
-    #intro {
+    #intro1 {
       font-size: 20px;
+      text-align: center;
+    }
+
+    #intro2 {
+      font-size: 30px;
+      text-align: center;
+    }
+
+    #intro3 {
+      font-size: 15px;
+      text-align: center;
     }
 
   </style>
@@ -45,7 +56,10 @@
 
     <div class="container-fluid">
 
-      <p2 id="intro"> Hi! My name is <br><b> Jack Douglas </b> and this is my personal website. Feel free to have a look around! </p2>
+      <p2 id="intro1"> Hi! My name is <p2>
+      <br>
+      <p1 id="intro2"> <br> Jack Douglas </b> </p1>
+      <p3 id="intro3"> This is my personal website. Feel free to have a look around! </p3>
 
     </div>
 
