--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <p2 id="intro1"> Hi! My name is <p2>
       <br>
-      <p1 id="intro2"> <br> Jack Douglas </b> </p1>
+      <p1 id="intro2"> <b> Jack Douglas </b> </p1>
       <p3 id="intro3"> This is my personal website. Feel free to have a look around! </p3>
 
     </div>
