--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.css">
 
   <link rel="icon" href="https://i.imgur.com/6nEJrsG.jpg">
 
@@ -37,7 +37,7 @@
     }
 
     #intro3 {
-      font-size: 15px;
+      font-size: 20px;
       text-align: center;
     }
 
@@ -59,6 +59,7 @@
       <p2 id="intro1"> Hi! My name is <p2>
       <br>
       <p1 id="intro2"> <b> Jack Douglas </b> </p1>
+      <br>
       <p3 id="intro3"> This is my personal website. Feel free to have a look around! </p3>
 
     </div>
