--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
   </head>
 
   <style>
-  	#WebTitle {
-  		text-align: center;
-  		font-family: monospace;
-      font-size: 16px;
-  		color: white;
-  	}
+ 
   	body {
   		background-color: #EAF9FA;
   	}
@@ -48,7 +43,7 @@
     <nav class="navbar sticky-top navbar-light bg-light">
       <div class="top clearfix">
         <a class="navbar-brand" href="#">
-          <img src="https://i.imgur.com/6nEJrsG.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+          <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top align-center" alt="">
           Jack Douglas
         </a>
       </div>
