--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       text-align: center;
     }
 
+    .footer {
+        position: relative;
+        margin-top: -150px; /* negative value of footer height */
+        height: 150px;
+        clear:both;
+        padding-top:20px;
+    }
+
   </style>
   
   <body>
@@ -49,7 +57,7 @@
       </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container">
 
       <p2 id="intro1"> Hi! My name is <p2>
       <br>
@@ -60,7 +68,7 @@
     </div>
 
 
-    <footer class="container site-footer">
+    <footer class="footer">
 
       <div class="container" style="color: #294547;">
 
