--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <nav class="navbar sticky-top navbar-light bg-light">
       <div class="top clearfix">
         <a class="navbar-brand" href="#">
-          <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top align-center" alt="">
-          Jack Douglas
+          <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top align-center" alt=""><p style="font-size= 30px;">
+          Jack Douglas </p>
         </a>
       </div>
     </nav>
