--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="Fonts_Awesome">
 
   <link rel="icon" href="https://i.imgur.com/6nEJrsG.jpg">
 
@@ -50,9 +50,8 @@
   
     <nav class="navbar sticky-top navbar-light bg-light">
       <div class="top clearfix">
-        <a class="navbar-brand" href="#">
-          <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top align-center" alt=""><p style="font-size= 30px;">
-          Jack Douglas </p>
+        <a class="navbar-brand" href="index.html">
+          <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top align-center" alt="">
         </a>
       </div>
     </nav>
@@ -68,7 +67,7 @@
     </div>
 
 
-    <footer class="footer">
+    <footer class="site-footer">
 
       <div class="container" style="color: #294547;">
 
