--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="Fonts_Awesome">
+  <link rel="stylesheet" href="Fonts_Awesome/font-awesome-4.7.0/css/font-awesome.css">
 
   <link rel="icon" href="https://i.imgur.com/6nEJrsG.jpg">
 
