--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
       <br>
       <p1 id="intro2"> <b> Jack Douglas </b> </p1>
       <br>
-      <p3 id="intro3"> This is my personal website. Feel free to have a look around! </p3>
+      <p3 id="intro3"> This is my personal website. Have a look around! </p3>
 
     </div>
 
+    <br>
 
     <footer class="site-footer">
 
@@ -79,7 +80,7 @@
             </div>
             <div class="right social-link floatright">
               Made by Jack Douglas, on 
-              <a href="https://github.com/j-douglas/j-douglas.github.io" > <i class="fa fa-github"></i>
+              <a href="https://github.com/j-douglas/j-douglas.github.io" > <i class="fa fa-github fa-2x"></i>
               </a>
             </div>
           </div>
