--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   
   <body>
   
+  <header class="pagewidth clearfix">
     <nav class="navbar sticky-top navbar-light bg-light">
       <div class="top clearfix">
         <a class="navbar-brand" href="index.html">
@@ -55,6 +56,7 @@
         </a>
       </div>
     </nav>
+  </header>
 
     <div class="container">
 
