--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <div class="right social-link floatright">
               Made by Jack Douglas, on 
-              <a href="https://github.com/j-douglas/j-douglas.github.io" > <i class="fa fa-github fa-2x"></i>
+              <a href="https://github.com/j-douglas/j-douglas.github.io" > <i class="fa fa-github fa-lg"></i>
               </a>
             </div>
           </div>
