--- a/index.html
+++ b/index.html
@@ -72,23 +72,16 @@
 
     <footer class="site-footer">
 
-      <div class="container" style="color: #294547;">
+      <div class="container" style="color: #294547">
 
         <div class="row">
-
-          <div class="col-xs-12 ">
-            <div class="left floatleft">
-              <p id="Copyright1">Copyright © 2017 Jack Douglas.</p>
-            </div>
-            <div class="right social-link floatright">
-              Made by Jack Douglas, on 
+              <p id="Copyright1"> © 2017 Jack Douglas</p>
+        </div>
+        <div class="row">
+              Made on 
               <a href="https://github.com/j-douglas/j-douglas.github.io" > <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
               </a>
-            </div>
-          </div>
-
         </div>
-
       </div>
 
     </footer>
