--- a/index.html
+++ b/index.html
@@ -70,21 +70,25 @@
 
     <br>
 
+  <div class="container"> 
     <footer class="site-footer">
 
-      <div class="container" style="color: #294547">
+      <div style="color: #294547">
 
         <div class="row">
-              <p id="Copyright1"> © 2017 Jack Douglas</p>
+              <p style="text-align: center"> © 2017 Jack Douglas</p>
         </div>
         <div class="row">
-              Made on 
+              <p style="text-align: center"> Made on </p>
               <a href="https://github.com/j-douglas/j-douglas.github.io" > <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
               </a>
         </div>
       </div>
+    
+      </footer>
+    </div>
 
-    </footer>
+    
 
   </body>
 
