--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="container">
 
-      <p2 id="intro1"> Hi! My name is <p2>
+      <p2 id="intro1" style="text-align: center;"> Hi! My name is <p2>
       <br>
       <p1 id="intro2"> <b> Jack Douglas </b> </p1>
       <br>
@@ -76,10 +76,10 @@
       <div style="color: #294547">
 
         <div class="row">
-              <p style="text-align: center"> © 2017 Jack Douglas</p>
+              <p style="text-align: center;"> © 2017 Jack Douglas</p>
         </div>
         <div class="row">
-              <p style="text-align: center"> Made on </p>
+              <p style="text-align: center;">Made on  </p>
               <a href="https://github.com/j-douglas/j-douglas.github.io" > <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
               </a>
         </div>
