--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 
   <style>
  
+
   	body {
   		background-color: #EAF9FA;
   	}
+
+    #navbar {
+      opacity: 75%;
+    }
 
     #intro1 {
       font-size: 20px;
@@ -49,7 +54,7 @@
   <body>
 
       <header class="pagewidth clearfix">
-        <nav class="navbar sticky-top navbar-light bg-light">
+        <nav class="navbar sticky-top navbar-light bg-light" id="navbar">
           <div class="top clearfix">
             <a class="navbar-brand" href="index.html">
               <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top align-center" alt="">
