--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
   
   <body>
 
-      <header class="pagewidth clearfix">
-        <nav class="navbar sticky-top navbar-light bg-light" id="navbar">
+        <nav class="navbar sticky-top" id="navbar">
           <div class="top clearfix">
-            <a class="navbar-brand" href="index.html">
-              <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top align-center" alt="">
+            <a class="navbar-brand center" href="index.html">
+              <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
             </a>
           </div>
+          <ul id="tabs" class="left">
+          </ul>
         </nav>
-      </header>
 
         <div class="container">
 
