--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   
   <body>
 
-        <nav class="navbar sticky-top" id="navbar">
+        <nav class="navbar sticky-top navbar-light" id="navbar">
           <div class="top clearfix">
             <a class="navbar-brand center" href="index.html">
               <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
@@ -84,11 +84,11 @@
                   <p style="text-align: center;"> © 2017 Jack Douglas</p>
             </div>
             <div class="row">
-                  <p> "Made on "</p>
+                  <p> Made on  </p>
                   <a href="https://github.com/j-douglas/j-douglas.github.io"> 
                       <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
                   </a> 
-                  <p>" with "</p>
+                  <p>  with  </p>
                   <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
             </div>
 
