--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <style>
  
 
-  	.body {
+  	body {
   		background-color: #EAF9FA;
   	}
 
@@ -41,7 +41,7 @@
       text-align: center;
     }
 
-    .footer {
+    #footer {
         position: relative;
         margin-top: -150px; /* negative value of footer height */
         height: 150px;
