--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     }
 
     #footer {
-        position: relative;
-        margin-top: -150px; /* negative value of footer height */
-        height: 150px;
+        position: fixed;
+        margin-top: -50px; /* negative value of footer height */
+        height: 50px;
         clear:both;
         padding-top:20px;
         background-color: lightgrey;
@@ -79,8 +79,7 @@
 
         <br>
 
-      <div class="container"> 
-        <footer class="site-footer" id="footer">
+        <footer class="site-footer wrapper" id="footer">
 
             <div class="row">
                   <p style="text-align: center;"> © 2017 Jack Douglas</p>
@@ -94,9 +93,8 @@
                   <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
             </div>
 
-        
         </footer>
-      </div>
+
 
 
   </body>
