--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   	}
 
     #navbar {
-      opacity: 75%;
+      opacity: 10%;
     }
 
     #intro1 {
@@ -60,7 +60,7 @@
               <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
             </a>
           </div>
-          <ul id="tabs" class="left">
+          <ul id="tabs">
             <li class="nav-item">
               <a class="nav-link" href="#AboutMe"> About Me </a>
             </li>
@@ -79,7 +79,9 @@
 
         <br>
 
-        <footer class="site-footer wrapper" id="footer">
+
+      <div class="container">
+        <footer class="site-footer" id="footer">
 
             <div class="row">
                   <p style="text-align: center;"> © 2017 Jack Douglas</p>
@@ -94,7 +96,7 @@
             </div>
 
         </footer>
-
+      </div>
 
 
   </body>
