--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 
   <head>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="Font_Awesome/css/font-awesome.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 
-  <link rel="icon" href="https://i.imgur.com/6nEJrsG.jpg">
+    <link rel="stylesheet" href="Font_Awesome/css/font-awesome.css">
+
+    <link rel="icon" href="https://i.imgur.com/6nEJrsG.jpg">
 
   </head>
 
@@ -43,8 +46,8 @@
 
     #footer {
         position: fixed;
-        margin-top: -50px; /* negative value of footer height */
-        height: 50px;
+        margin-top: -150px; /* negative value of footer height */
+        height: 150px;
         clear:both;
         padding-top:20px;
         background-color: lightgrey;
@@ -79,25 +82,24 @@
 
         <br>
 
-
-      <div class="container">
-        <footer class="site-footer" id="footer">
-
-            <div class="row">
-                  <p style="text-align: center;"> © 2017 Jack Douglas</p>
-            </div>
-            <div class="row">
-                  "Made on  "
-                  <a href="https://github.com/j-douglas/j-douglas.github.io"> 
-                      <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
-                  </a> 
-                  " with "
-                  <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
-            </div>
-
-        </footer>
+      <footer>
+        <div class="container">
+          <div class="second-bar">
+             <div class="container">
+                  <h2 class="logo"> © 2017 Jack Douglas </h2>
+                  <div class="social-icons">
+                      <h2> Made on
+                        <a href="https://github.com/j-douglas/j-douglas.github.io"> 
+                          <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
+                        </a>
+                        with
+                        <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
+                      </h2>
+                  </div>
+              </div>
+          </div>
+        </div>
       </div>
-
 
   </body>
 
