--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
     }
 
     #footer2 {
+      font-size: 10px;
       text-align: left;
     }
 
     #footer3 {
+      font-size: 10px;
       text-align: right;
     }
 
@@ -93,16 +95,16 @@
       <footer id="footer1">
         <div class="container">
           <div class="second-bar">
-             <div class="container row">
-                  <h2 id="footer2"> © 2017 Jack Douglas </h2>
-                  <div class="social-icons">
-                      <h3 id="footer3"> Made on
-                        <a href="https://github.com/j-douglas/j-douglas.github.io"> 
-                          <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
-                        </a>
-                        with
-                        <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
-                      </h3>
+             <div class="container">
+                  <div class="row"> 
+                    <h2 id="footer2"> © 2017 Jack Douglas </h2>
+                    <h3 id="footer3"> Made on
+                      <a href="https://github.com/j-douglas/j-douglas.github.io"> 
+                        <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
+                      </a>
+                      with
+                      <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
+                    </h3>
                   </div>
               </div>
           </div>
