--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     }
 
     #footer1 {
-        position: fixed;
+        position: relative;
         margin-top: -150px; /* negative value of footer height */
         height: 150px;
         clear:both;
@@ -67,52 +67,46 @@
   
   <body>
 
-        <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
-          <div class="top clearfix">
-            <a class="navbar-brand center" href="index.html">
-              <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-            </a>
-          </div>
-          <ul id="tabs">
-            <li class="nav-item">
-              <a class="nav-link" href="#AboutMe"> About Me </a>
-            </li>
-          </ul>
-        </nav>
+    <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
+      <div class="top clearfix">
+        <a class="navbar-brand center" href="index.html">
+          <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
+        </a>
+      </div>
+      <ul id="tabs">
+        <li class="nav-item">
+          <a class="nav-link" href="#AboutMe"> About Me </a>
+        </li>
+      </ul>
+    </nav>
 
-        <div class="container">
+    <div class="container">
+      <p2 id="intro1" style="text-align: center;"> Hi! My name is <p2>
+      <br>
+      <p1 id="intro2"> <b> Jack Douglas </b> </p1>
+      <br>
+      <p3 id="intro3"> This is my personal website. Have a look around! </p3>
+    </div>
 
-          <p2 id="intro1" style="text-align: center;"> Hi! My name is <p2>
-          <br>
-          <p1 id="intro2"> <b> Jack Douglas </b> </p1>
-          <br>
-          <p3 id="intro3"> This is my personal website. Have a look around! </p3>
-
-        </div>
-
-        <br>
-
-      <footer id="footer1">
-        <div class="container">
-          <div class="second-bar">
-             <div class="container">
-                  <div class="row"> 
-                    <h2 id="footer2"> © 2017 Jack Douglas </h2>
-                    <h3 id="footer3"> Made on
-                      <a href="https://github.com/j-douglas/j-douglas.github.io"> 
-                        <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
-                      </a>
-                      with
-                      <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
-                    </h3>
-                  </div>
-              </div>
-          </div>
+    <footer id="footer1">
+      <div class="container">
+        <div class="second-bar">
+            <div class="container">
+                <div class="row"> 
+                  <h2 id="footer2"> © 2017 Jack Douglas </h2>
+                  <h3 id="footer3"> Made on
+                    <a href="https://github.com/j-douglas/j-douglas.github.io"> 
+                      <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
+                    </a>
+                    with
+                    <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
+                  </h3>
+                </div>
+            </div>
         </div>
       </div>
+    </footer>
 
   </body>
 
-
-  
 </html>
