--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         position: relative;
         margin-top: -150px; /* negative value of footer height */
         height: 150px;
-        clear:both;
-        padding-top:20px;
+        clear: both;
+        padding-top: 20px;
         background-color: lightgrey;
     }
 
@@ -60,7 +60,6 @@
 
     #footer3 {
       font-size: 10px;
-      text-align: right;
     }
 
   </style>
@@ -93,14 +92,20 @@
         <div class="second-bar">
             <div class="container">
                 <div class="row"> 
-                  <h2 id="footer2"> © 2017 Jack Douglas </h2>
-                  <h3 id="footer3"> Made on
-                    <a href="https://github.com/j-douglas/j-douglas.github.io"> 
-                      <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
-                    </a>
-                    with
-                    <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
-                  </h3>
+                  <div class="col-md-4"> 
+                    <h2 id="footer2"> © 2017 Jack Douglas </h2>
+                  </div>
+                  <div class="col-md-4">
+                  </div>
+                  <div class="col-md-4">
+                    <h3 id="footer3"> Made on
+                      <a href="https://github.com/j-douglas/j-douglas.github.io"> 
+                        <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
+                      </a>
+                      with
+                      <i class="fa fa-code fa-lg" style="color: #3F3E3E"></i>
+                    </h3>
+                  </div>
                 </div>
             </div>
         </div>
