--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
     #intro1 {
       font-size: 20px;
-      text-align: center;
+      float: center;
     }
 
     #intro2 {
       font-size: 30px;
-      text-align: center;
+      float: center;
     }
 
     #intro3 {
       font-size: 20px;
-      text-align: center;
+      float: center;
     }
 
     #footer1 {
@@ -80,7 +80,7 @@
     </nav>
 
     <div class="container">
-      <p2 id="intro1" style="text-align: center;"> Hi! My name is <p2>
+      <p2 id="intro1"> Hi! My name is <p2>
       <br>
       <p1 id="intro2"> <b> Jack Douglas </b> </p1>
       <br>
@@ -97,7 +97,7 @@
                   </div>
                   <div class="col-md-4">
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4" style="float: right;">
                     <h3 id="footer3"> Made on
                       <a href="https://github.com/j-douglas/j-douglas.github.io"> 
                         <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
