--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       <p3 id="intro3"> This is my personal website. Have a look around! </p3>
     </div>
 
+    <div class="container">
     <footer id="footer1">
       <div class="container">
         <div class="second-bar">
@@ -97,7 +98,7 @@
                   </div>
                   <div class="col-md-4">
                   </div>
-                  <div class="col-md-4" style="float: right;">
+                  <div class="col-md-4" style="float: right">
                     <h3 id="footer3"> Made on
                       <a href="https://github.com/j-douglas/j-douglas.github.io"> 
                         <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
@@ -111,6 +112,7 @@
         </div>
       </div>
     </footer>
+    </div>
 
   </body>
 
