--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
     <br>
 
+    <div>
     <footer id="footer1">
       <div class="container">
         <div class="second-bar">
@@ -113,6 +114,7 @@
         </div>
       </div>
     </footer>
+    </div>
 
   </body>
 
