--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
     }
 
     #footer2 {
-      font-size: 15px;
-      text-align: left;
+      font-size: 12px;
+      float: left;
     }
 
     #footer3 {
-      font-size: 15px;
+      font-size: 12px;
+      float: right;
     }
 
   </style>
@@ -100,7 +101,7 @@
                   </div>
                   <div class="col-md-4">
                   </div>
-                  <div class="col-md-4" style="float: right">
+                  <div class="col-md-4">
                     <h3 id="footer3"> Made on
                       <a href="https://github.com/j-douglas/j-douglas.github.io"> 
                         <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
