--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     }
 
     #footer1 {
+        position: relative;;
         margin-top: -50px; /* negative value of footer height */
         height: 50px;
         clear: both;
@@ -80,8 +81,9 @@
     </nav>
 
     <div class="container">
-      <p2 id="intro1"> Hi! My name is <p2>
-      <p1 id="intro2"> <b> Jack Douglas </b> </p1>
+      <p2 id="intro1"> Hi! My name is 
+        <p1 id="intro2"> <b> Jack Douglas </b> </p1>
+      . </p2>
       <br>
       <p3 id="intro3"> This is my personal website. Have a look around! </p3>
     </div>
