--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
     #footer2 {
       font-size: 12px;
-      float: left;
+    /**  float: left;*/
     }
 
     #footer3 {
       font-size: 12px;
-      float: right;
+   /**   float: right; */
     }
 
   </style>
@@ -93,17 +93,17 @@
     <br>
 
     <div>
-    <footer id="footer1">
+    <footer class="footer" id="footer1">
       <div class="container">
         <div class="second-bar">
             <div class="container">
                 <div class="row"> 
-                  <div class="col-md-4"> 
+                  <div class="col-md-4 left floatleft"> 
                     <h2 id="footer2"> © 2017 Jack Douglas </h2>
                   </div>
                   <div class="col-md-4">
                   </div>
-                  <div class="col-md-4">
+                  <div class="col-md-4 right floatright">
                     <h3 id="footer3"> Made on
                       <a href="https://github.com/j-douglas/j-douglas.github.io"> 
                         <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
