--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 
     #footer2 {
       font-size: 12px;
-    /**  float: left;*/
+      float: left;
     }
 
     #footer3 {
       font-size: 12px;
-   /**   float: right; */
+      float: right;
     }
 
   </style>
@@ -69,24 +69,51 @@
 
     <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
       <div class="top clearfix">
-        <a class="navbar-brand center" href="index.html">
+        <a class="navbar-brand center" href="#Home">
           <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
         </a>
       </div>
       <ul id="tabs">
         <li class="nav-item">
           <a class="nav-link" href="#AboutMe"> About Me </a>
+          <a class="nav-link" href="#Projects"> Projects </a>
+          <a class="nav-link" href="#Skills"> Skills </a>
+          <a class="nav-link" href="#Awards/Achievements"> Awards & Achievements </a>
+          <a class="nav-link" href="#Contact"> Contact </a>
         </li>
       </ul>
     </nav>
 
-    <div class="container">
-      <p2 id="intro1"> Hi! My name is 
-        <p1 id="intro2"> <b> Jack Douglas</b></p1>
-      .</p2>
-      <br>
-      <p3 id="intro3"> This is my personal website. Have a look around! </p3>
-    </div>
+
+    <section id="Home">
+      <div class="container">
+        <p2 id="intro1"> Hi! My name is 
+          <p1 id="intro2"> <b> Jack Douglas</b></p1>
+        .</p2>
+        <br>
+        <p3 id="intro3"> This is my personal website. Have a look around! </p3>
+      </div>
+    </section>
+
+    <section id="AboutMe">
+
+    </section>
+
+    <section id="Projects">
+
+    </section>
+
+    <section id="Skills">
+
+    </section>
+
+    <section id="Awards/Achievements">
+
+    </section>
+
+    <section id="Contact">
+
+    </section>
 
     <br>
     <br>
@@ -98,12 +125,12 @@
         <div class="second-bar">
             <div class="container">
                 <div class="row"> 
-                  <div class="col-md-4 left floatleft"> 
+                  <div class="col-md-4"> 
                     <h2 id="footer2"> © 2017 Jack Douglas </h2>
                   </div>
                   <div class="col-md-4">
                   </div>
-                  <div class="col-md-4 right floatright">
+                  <div class="col-md-4">
                     <h3 id="footer3"> Made on
                       <a href="https://github.com/j-douglas/j-douglas.github.io"> 
                         <i class="fa fa-github fa-lg" style="color: #3F3E3E"></i>
