--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </a>
       </div>
       <ul id="tabs">
-        <li class="nav-item">
+        <li class="nav navbar-nav navbar-left">
           <a class="nav-link" href="#AboutMe"> About Me </a>
           <a class="nav-link" href="#Projects"> Projects </a>
           <a class="nav-link" href="#Skills"> Skills </a>
