--- a/index.html
+++ b/index.html
@@ -74,21 +74,22 @@
   
   <body>
 
-    <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
+    <nav class="navbar sticky-top navbar-light bg-faded" id="navbar" style="padding-top: 110px;">
       <div class="row">  
         <div class="navbar-header">
           <a class="navbar-brand" href="#Home">
             <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
           </a>
         </div>
-        <ul id="tabs">
-          <li class="nav navbar-nav navbar-left">
-            <a class="nav-link" href="#AboutMe"> About Me </a>
-            <a class="nav-link" href="#Projects"> Projects </a>
-            <a class="nav-link" href="#Skills"> Skills </a>
-            <a class="nav-link" href="#Awards/Achievements"> Awards </a>
-            <a class="nav-link" href="#Contact"> Contact </a>
-          </li>
+        <div class="collapse navbar-collapse">  
+          <ul id="nav navbar-nav">
+            <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
+            <li><a class="nav-link" href="#Projects"> Projects </a></li>
+            <li><a class="nav-link" href="#Skills"> Skills </a></li>
+            <li><a class="nav-link" href="#Awards/Achievements"> Awards </a></li>
+            <li><a class="nav-link" href="#Contact"> Contact </a></li>
+            </li>
+          </div>
         </ul>
       </div>
     </nav>
