--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   
   <body>
 
-    <nav class="navbar sticky-top navbar-light bg-faded" id="navbar" style="padding-top: 70px;">
+    <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
   
         <div class="navbar-header">
           <a class="navbar-brand" href="#Home">
@@ -96,9 +96,15 @@
 
     <section id="Home">
       <div class="container">
-        <p2 id="intro1"> Hi! My name is <p1 id="intro2"> <b> Jack Douglas</b></p1>.</p2>
-        <br>
-        <p3 id="intro3"> This is my personal website. Have a look around! </p3>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4" style="float: center;">
+          <p2 id="intro1"> Hi! My name is <p1 id="intro2"> <b> Jack Douglas</b></p1>.</p2>
+          <br>
+          <p3 id="intro3"> This is my personal website. Have a look around! </p3>
+        </div>
+        <div class="col-md-4">
+        </div>
       </div>
     </section>
 
