--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
           </a>
         </div>
-        <div class="collapse navbar-collapse">  
+        <div>  
           <ul id="nav navbar-nav">
             <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
             <li><a class="nav-link" href="#Projects"> Projects </a></li>
@@ -98,7 +98,7 @@
       <div class="container">
         <div class="col-md-4">
         </div>
-        <div class="col-md-4" style="float: center;">
+        <div class="col-md-4" style="text-align: center;">
           <p2 id="intro1"> Hi! My name is <p1 id="intro2"> <b> Jack Douglas</b></p1>.</p2>
           <br>
           <p3 id="intro3"> This is my personal website. Have a look around! </p3>
