--- a/index.html
+++ b/index.html
@@ -79,16 +79,14 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="#Home">
             <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-          </a>
-          <div> 
-            <ul id="nav navbar-nav">
+          </a> 
+            <ul id="tabs navbar-nav">
               <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
               <li><a class="nav-link" href="#Projects"> Projects </a></li>
               <li><a class="nav-link" href="#Skills"> Skills </a></li>
               <li><a class="nav-link" href="#Awards/Achievements"> Awards </a></li>
               <li><a class="nav-link" href="#Contact"> Contact </a></li>
             <ul>
-          </div>
         </div>
 
     </nav>
