--- a/index.html
+++ b/index.html
@@ -23,14 +23,20 @@
 
   	#AboutMe {
   		background-color: #EAF9FA;
+      padding-top: 20px;
+      padding-bottom: 20px;
   	}
 
     #Skills {
       background-color: #EAF9FA;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
 
     #Contact {
       background-color: #EAF9FA;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
 
     #navbar {
