--- a/index.html
+++ b/index.html
@@ -19,24 +19,34 @@
   </head>
 
   <style>
- 
+
+    #Home {
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
 
   	#AboutMe {
   		background-color: #EAF9FA;
       padding-top: 20px;
-      padding-bottom: 20px;
   	}
+
+    #Projects {
+      padding-top: 20px;
+    }
 
     #Skills {
       background-color: #EAF9FA;
       padding-top: 20px;
-      padding-bottom: 20px;
+    }
+
+    #Awards {
+      padding-top: 20px;
     }
 
     #Contact {
       background-color: #EAF9FA;
       padding-top: 20px;
-      padding-bottom: 20px;
+
     }
 
     #navbar {
@@ -149,10 +159,6 @@
         <p> This is the contact section. </p>
       </div>
     </section>
-
-    <br>
-    <br>
-    <br>
 
     <div>
     <footer class="footer" id="footer1">
