--- a/index.html
+++ b/index.html
@@ -28,25 +28,27 @@
   	#AboutMe {
   		background-color: #EAF9FA;
       padding-top: 20px;
+      padding-bottom: 20px;
   	}
 
     #Projects {
-      padding-top: 20px;
+    /**  padding-top: 20px; */
     }
 
     #Skills {
       background-color: #EAF9FA;
       padding-top: 20px;
+      padding-bottom: 20px;
     }
 
     #Awards {
-      padding-top: 20px;
+    /**  padding-top: 20px; */
     }
 
     #Contact {
       background-color: #EAF9FA;
       padding-top: 20px;
-
+      padding-bottom: 20px;
     }
 
     #navbar {
@@ -69,7 +71,7 @@
     }
 
     #footer1 {
-        margin-top: -50px; /* negative value of footer height */
+        margin-top: -150px; /* negative value of footer height */
         height: 50px;
         clear: both;
         padding-top: 20px;
