--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   	}
 
     #Projects {
-    /**  padding-top: 20px; */
+      padding-top: 20px;
     }
 
     #Skills {
@@ -42,7 +42,7 @@
     }
 
     #Awards {
-    /**  padding-top: 20px; */
+      padding-top: 20px; 
     }
 
     #Contact {
@@ -71,7 +71,7 @@
     }
 
     #footer1 {
-        margin-top: -150px; /* negative value of footer height */
+        margin-top: 0px; /* negative value of footer height */
         height: 50px;
         clear: both;
         padding-top: 20px;
