--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
   	#AboutMe {
   		background-color: #EAF9FA;
       padding-top: 20px;
-      padding-bottom: 20px;
   	}
 
     #Projects {
@@ -38,7 +37,6 @@
     #Skills {
       background-color: #EAF9FA;
       padding-top: 20px;
-      padding-bottom: 20px;
     }
 
     #Awards {
@@ -48,7 +46,6 @@
     #Contact {
       background-color: #EAF9FA;
       padding-top: 20px;
-      padding-bottom: 20px;
     }
 
     #navbar {
@@ -101,20 +98,20 @@
   <body>
 
     <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
-  
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#Home">
-            <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-          </a> 
-            <ul id="tabs navbar-nav">
-              <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
-              <li><a class="nav-link" href="#Projects"> Projects </a></li>
-              <li><a class="nav-link" href="#Skills"> Skills </a></li>
-              <li><a class="nav-link" href="#Awards/Achievements"> Awards </a></li>
-              <li><a class="nav-link" href="#Contact"> Contact </a></li>
-            <ul>
-        </div>
-
+      <div class="col-md-4">
+          <ul id="nav-tabs navbar-nav">
+            <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
+            <li><a class="nav-link" href="#Projects"> Projects </a></li>
+            <li><a class="nav-link" href="#Skills"> Skills </a></li>
+            <li><a class="nav-link" href="#Awards/Achievements"> Awards </a></li>
+            <li><a class="nav-link" href="#Contact"> Contact </a></li>
+          <ul>
+      </div>
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#Home">
+          <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
+        </a> 
+      </div>
     </nav>
 
 
