--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   	#AboutMe {
   		background-color: #EAF9FA;
       padding-top: 20px;
+      padding-bottom: 10px;
   	}
 
     #Projects {
@@ -37,6 +38,7 @@
     #Skills {
       background-color: #EAF9FA;
       padding-top: 20px;
+      padding-bottom: 10px;
     }
 
     #Awards {
@@ -46,6 +48,7 @@
     #Contact {
       background-color: #EAF9FA;
       padding-top: 20px;
+      padding-bottom: 10px;
     }
 
     #navbar {
@@ -98,16 +101,14 @@
   <body>
 
     <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
-      <div class="col-md-4">
-          <ul id="nav-tabs navbar-nav">
-            <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
-            <li><a class="nav-link" href="#Projects"> Projects </a></li>
-            <li><a class="nav-link" href="#Skills"> Skills </a></li>
-            <li><a class="nav-link" href="#Awards/Achievements"> Awards </a></li>
-            <li><a class="nav-link" href="#Contact"> Contact </a></li>
-          <ul>
-      </div>
       <div class="navbar-header">
+        <ul id="nav justify-content-left">
+          <li class="nav-item"><a class="nav-link" href="#AboutMe"> About Me </a></li>
+          <li class="nav-item"><a class="nav-link" href="#Projects"> Projects </a></li>
+          <li class="nav-item"><a class="nav-link" href="#Skills"> Skills </a></li>
+          <li class="nav-item"><a class="nav-link" href="#Awards"> Awards </a></li>
+          <li class="nav-item"><a class="nav-link" href="#Contact"> Contact </a></li>
+        <ul>
         <a class="navbar-brand" href="#Home">
           <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
         </a> 
