--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     #Projects {
       padding-top: 20px;
+      padding-bottom: 5px;
     }
 
     #Skills {
@@ -42,7 +43,8 @@
     }
 
     #Awards {
-      padding-top: 20px; 
+      padding-top: 20px;
+      padding-bottom: 5px; 
     }
 
     #Contact {
@@ -91,16 +93,11 @@
     .navbar-header {
       float: left;
       padding: 15px;
+      text-align: center;
       width: 100%;
     }
     .navbar-brand {
       float:none;
-      text-align: center;
-    }
-    
-    .nav-tabs {
-      float: none;
-      text-align: left;
     }
 
   </style>
@@ -109,15 +106,13 @@
 
     <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
       <div class="navbar-header">
-        <div class="row">
-          <ul id="nav nav-tabs">
-            <li class="nav-item"><a class="nav-link" href="#AboutMe"> About Me </a></li>
-            <li class="nav-item"><a class="nav-link" href="#Projects"> Projects </a></li>
-            <li class="nav-item"><a class="nav-link" href="#Skills"> Skills </a></li>
-            <li class="nav-item"><a class="nav-link" href="#Awards"> Awards </a></li>
-            <li class="nav-item"><a class="nav-link" href="#Contact"> Contact </a></li>
+          <ul id="nav navbar-nav navbar-left">
+            <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
+            <li><a class="nav-link" href="#Projects"> Projects </a></li>
+            <li><a class="nav-link" href="#Skills"> Skills </a></li>
+            <li><a class="nav-link" href="#Awards"> Awards </a></li>
+            <li><a class="nav-link" href="#Contact"> Contact </a></li>
           </ul>
-        </div>
         <a class="navbar-brand" href="#Home">
           <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
         </a> 
