--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
     <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
       <div class="navbar-header">
+        <div class="navbar-brand">
           <ul id="nav navbar-nav navbar-left">
             <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
             <li><a class="nav-link" href="#Projects"> Projects </a></li>
@@ -113,9 +114,10 @@
             <li><a class="nav-link" href="#Awards"> Awards </a></li>
             <li><a class="nav-link" href="#Contact"> Contact </a></li>
           </ul>
-        <a class="navbar-brand" href="#Home">
+        <a href="#Home">
           <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-        </a> 
+        </a>
+        </div> 
       </div>
     </nav>
 
