--- a/index.html
+++ b/index.html
@@ -100,11 +100,15 @@
       float:none;
     }
 
+    #navbar { 
+      background-color: rgba(192,200,200,0.9) !important; 
+    }
+
   </style>
   
   <body>
 
-    <nav class="navbar sticky-top navbar-light bg-faded" id="navbar">
+    <nav class="navbar sticky-top" id="navbar">
       <div class="navbar-header">
         <div class="navbar-brand">
           <ul id="nav navbar-nav navbar-left">
