--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     }
 
     #navbar { 
-      background-color: rgba(227,230,230,0.9) !important; 
+      background-color: rgba(240,240,240,0.9) !important; 
     }
 
   </style>
@@ -118,7 +118,7 @@
             <li><a class="nav-link" href="#Awards"> Awards </a></li>
             <li><a class="nav-link" href="#Contact"> Contact </a></li>
           </ul>
-        <a href="#Home">
+        <a href="index.html">
           <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
         </a>
         </div> 
