--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="Font_Awesome/css/font-awesome.css">
 
-    <link rel="icon" href="https://i.imgur.com/6nEJrsG.jpg">
+    <link rel="icon" href="images/JD.jpg">
 
   </head>
 
@@ -119,7 +119,7 @@
             <li><a class="nav-link" href="#Contact"> Contact </a></li>
           </ul>
         <a href="index.html">
-          <img src="https://i.imgur.com/6nEJrsG.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
+          <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
         </a>
         </div> 
       </div>
