--- a/index.html
+++ b/index.html
@@ -94,9 +94,22 @@
       padding: 0px;
     }
     .navbar-brand>img {
-      height: 100%;
+      height: 20%;
       padding: 15px;
       width: auto;
+    }
+
+    .brand-centered {
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      width: 100%;
+      left: 0;
+      top: 0;
+    }
+    .brand-centered .navbar-brand {
+      display: flex;
+      align-items: center;
     }
 
     #navbar { 
