--- a/index.html
+++ b/index.html
@@ -90,26 +90,14 @@
       float: right;
     }
 
-    .navbar-brand {
-      padding: 0px;
-    }
-    .navbar-brand>img {
-      height: 100%;
+    .navbar-header {
+      float: left;
       padding: 15px;
-      width: auto;
-    }
-
-    .brand-centered {
-      display: flex;
-      justify-content: center;
-      position: absolute;
+      text-align: center;
       width: 100%;
-      left: 0;
-      top: 0;
     }
-    .brand-centered .navbar-brand {
-      display: flex;
-      align-items: center;
+    .navbar-brand {
+      float:none;
     }
 
     #navbar { 
@@ -120,22 +108,18 @@
   
   <body>
 
-    <nav class="navbar sticky-top" id="navbar">
-      <div class="container-fluid">  
-        <div class="navbar-header">
-            <ul id="nav navbar-nav navbar-left">
-              <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
-              <li><a class="nav-link" href="#Projects"> Projects </a></li>
-              <li><a class="nav-link" href="#Skills"> Skills </a></li>
-              <li><a class="nav-link" href="#Awards"> Awards </a></li>
-              <li><a class="nav-link" href="#Contact"> Contact </a></li>
-            </ul>
-          <div class="brand-centered">
-            <a class="navbar-brand" href="index.html">
-              <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-            </a>
-          </div> 
-        </div>
+    <nav class="navbar sticky-top" id="navbar"> 
+      <div class="navbar-header">
+        <ul id="nav navbar-nav navbar-left">
+          <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
+          <li><a class="nav-link" href="#Projects"> Projects </a></li>
+          <li><a class="nav-link" href="#Skills"> Skills </a></li>
+          <li><a class="nav-link" href="#Awards"> Awards </a></li>
+          <li><a class="nav-link" href="#Contact"> Contact </a></li>
+        </ul>
+        <a href="index.html">
+          <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
+        </a> 
       </div>
     </nav>
 
