--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
     .navbar-header {
       float: left;
       padding: 15px;
-      text-align: center;
       width: 100%;
     }
     .navbar-brand {
@@ -117,7 +116,7 @@
           <li><a class="nav-link" href="#Awards"> Awards </a></li>
           <li><a class="nav-link" href="#Contact"> Contact </a></li>
         </ul>
-        <a href="index.html">
+        <a style="text-align: center;"href="index.html">
           <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
         </a> 
       </div>
