--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <li><a class="nav-link" href="#Awards"> Awards </a></li>
           <li><a class="nav-link" href="#Contact"> Contact </a></li>
         </ul>
-        <a style="text-align: center;"href="index.html">
+        <a class="navbar-brand" style="text-align: center;"href="index.html">
           <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
         </a> 
       </div>
