--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
       width: 100%;
     }
     .navbar-brand {
-      float:left;
+      float:none;
+    }
+
+    #logo {
       text-align: center;
     }
 
@@ -117,7 +120,7 @@
           <li><a class="nav-link" href="#Awards"> Awards </a></li>
           <li><a class="nav-link" href="#Contact"> Contact </a></li>
         </ul>
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="index.html" id="logo">
           <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
         </a> 
       </div>
