--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <body>
 
     <nav class="navbar sticky-top" id="navbar"> 
-      <div class="navbar-header">
+      <div>
         <ul id="nav navbar-nav navbar-left">
           <li><a class="nav-link" href="#AboutMe"> About Me </a></li>
           <li><a class="nav-link" href="#Projects"> Projects </a></li>
@@ -117,9 +117,11 @@
           <li><a class="nav-link" href="#Awards"> Awards </a></li>
           <li><a class="nav-link" href="#Contact"> Contact </a></li>
         </ul>
-        <a class="navbar-brand" href="index.html" id="logo">
-          <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
-        </a> 
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html" id="logo">
+            <img src="images/JD.jpg" width="50" height="50" class="d-inline-block align-top" alt="">
+          </a> 
+        </div>
       </div>
     </nav>
 
